added chat msg frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -161,12 +161,6 @@
                         </svg>
                     </button>
                 </div>
-                
-                <div class="chat-footer-info">
-                    <span class="char-count">
-                        <span id="leadMsgLen">0</span>/512
-                    </span>
-                </div>
             </div>
         </div>
 
@@ -184,7 +178,7 @@
                 
                 <div id="hintsContainer" class="chat-messages-container no-scrollbar">
                     <div class="empty-state">
-                        <div class="empty-icon">BULB</div>
+                        <div class="empty-icon">?</div>
                         <p>No hints available yet.</p>
                     </div>
                 </div>
