--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -126,7 +126,7 @@
             <div class="chat-content-area">
                 <div class="leads-info">
                     <div class="info-box">
-                        <div class="info-icon">INFO</div>
+                        <div class="info-icon">LEADS</div>
                         <div class="info-text">
                             <h4>Need Help?</h4>
                             <p>Send a message directly to the leads. They'll respond as soon as possible.</p>
@@ -159,13 +159,6 @@
                         </svg>
                     </button>
                 </div>
-                
-                <div class="chat-footer-info">
-                    <span class="char-count">
-                        <span id="leadMsgLen">0</span>/512
-                    </span>
-                    <span class="lead-status">Contact leads</span>
-                </div>
             </div>
         </div>
 
@@ -183,7 +176,7 @@
                 
                 <div id="hintsContainer" class="chat-messages-container no-scrollbar">
                     <div class="empty-state">
-                        <div class="empty-icon">BULB</div>
+                        <div class="empty-icon">?</div>
                         <p>No hints available yet.</p>
                     </div>
                 </div>
