compilation error fix + added further chat functionality

--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -138,10 +138,6 @@
                 <div class="leads-info">
                     <div class="info-box">
                         <div class="info-icon">LEADS</div>
-                        <div class="info-text">
-                            <h4>Need Help?</h4>
-                            <p>Send a message directly to the leads. They'll respond as soon as possible.</p>
-                        </div>
                     </div>
                 </div>
                 
@@ -156,7 +152,7 @@
             <div class="chat-input-area">
                 <div class="input-wrapper">
                     <textarea
-                        placeholder="Describe your question or issue..."
+                        placeholder="Ask a question..."
                         rows="1"
                         id="leadInput"
                         class="chat-input no-scrollbar"
@@ -178,10 +174,6 @@
                 <div class="hints-info">
                     <div class="info-box">
                         <div class="info-icon">HINT</div>
-                        <div class="info-text">
-                            <h4>Hint System</h4>
-                            <p>Official hints and announcements will appear here.</p>
-                        </div>
                     </div>
                 </div>
                 
