--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,10 +129,6 @@
                 <div class="leads-info">
                     <div class="info-box">
                         <div class="info-icon">LEADS</div>
-                        <div class="info-text">
-                            <h4>Contact Leads</h4>
-                            <p>Get direct help from leads.</p>
-                        </div>
                     </div>
                 </div>
                 
@@ -147,7 +143,7 @@
             <div class="chat-input-area">
                 <div class="input-wrapper">
                     <textarea
-                        placeholder="Describe your question or issue..."
+                        placeholder="Ask a question..."
                         rows="1"
                         id="leadInput"
                         class="chat-input no-scrollbar"
@@ -169,10 +165,6 @@
                 <div class="hints-info">
                     <div class="info-box">
                         <div class="info-icon">HINT</div>
-                        <div class="info-text">
-                            <h4>Hint System</h4>
-                            <p>Official hints and announcements will appear here.</p>
-                        </div>
                     </div>
                 </div>
                 
