--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -83,17 +83,12 @@
         <button id="btn-message" class="button-message">
             <div class="content-avatar">
                 <div class="avatar">
-                    <img src="assets/logo_nobg.png" alt="Chat" class="user-img" style="width: 24px; height: 24px; border-radius: 50%;">
+                    <img src="assets/logo_nobg.png" alt="Chat" class="user-img">
                 </div>
             </div>
-            <div class="notice-content">
-                <div class="username">Exun Clan</div>
-                <div class="lable-message">
-                    <span class="number-message" id="message-count" style="display: none;"></span>
-                </div>
-                <div class="user-id">exun@dpsrkp.net</div>
-            </div>
+            <div class="chat-notification-dot" id="chatNotificationDot"></div>
         </button>
+    </div>
     </div>
 
     <div id="chatPopup">
@@ -117,19 +112,17 @@
         </div>
 
         <div class="chat-header">
-            <h3 class="chat-title">Communication Hub</h3>
-        </div>
-
-        <div class="chat-tabs">
-            <div class="chat-tab active" onclick="switchChatTab('leads')" data-tab="leads">
-                <span class="tab-icon">MSG</span>
-                <span class="tab-text">Contact Leads</span>
-                <span class="tab-badge" id="leadsBadge" style="display: none;">0</span>
-            </div>
-            <div class="chat-tab" onclick="switchChatTab('hints')" data-tab="hints">
-                <span class="tab-icon">HINT</span>
-                <span class="tab-text">Hints</span>
-                <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
+            <div class="chat-title-area">
+                <div class="chat-tabs">
+                    <div class="chat-tab active" onclick="switchChatTab('leads')" data-tab="leads">
+                        <span class="tab-text">Leads</span>
+                        <span class="tab-badge" id="leadsBadge" style="display: none;">0</span>
+                    </div>
+                    <div class="chat-tab" onclick="switchChatTab('hints')" data-tab="hints">
+                        <span class="tab-text">Hints</span>
+                        <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -137,7 +130,6 @@
             <div class="chat-content-area">
                 <div class="leads-info">
                     <div class="info-box">
-                        <div class="info-icon">LEADS</div>
                     </div>
                 </div>
                 
@@ -173,7 +165,6 @@
             <div class="chat-content-area">
                 <div class="hints-info">
                     <div class="info-box">
-                        <div class="info-icon">HINT</div>
                     </div>
                 </div>
                 
