--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -18,7 +18,7 @@
             <a href="/home" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
                 <div class="logo-notification" id="logoNotification" style="display: none;"></div>
-                <span class="nav-brand">Intra Sudo vX.X</span>
+                <span class="nav-brand">Intra Sudo v6.0</span>
             </a>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <img src="assets/logo_nobg.png" alt="Menu" class="mobile-menu-icon">
@@ -47,7 +47,7 @@
     </div>
 
     <main class="page-container">
-        <div class="main-content-pages">
+        <div class="main-content-pages leaderboard-page">
             <div class="main-content">
             <h1 class="level-heading">Leaderboard</h1>
             
