--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,17 @@
         </div>
 
         <div class="chat-header">
-            <div class="chat-title-area">
+            <div class="chat-tabs">
+                    <div class="chat-tab active" onclick="switchChatTab('leads')" data-tab="leads">
+                        <span class="tab-text">Leads</span>
+                        <span class="tab-badge" id="leadsBadge" style="display: none;">0</span>
+                    </div>
+                    <div class="chat-tab" onclick="switchChatTab('hints')" data-tab="hints">
+                        <span class="tab-text">Hints</span>
+                        <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
+                    </div>
+            </div>
+            <!-- <div class="chat-title-area">
                 <div class="chat-connection-status" id="connectionStatus">
                     <span class="status-dot"></span>
                 </div>
@@ -114,7 +124,7 @@
                         <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div id="leadsContent" class="chat-tab-content active">
