added locked state management and notification dot

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -219,6 +219,16 @@
                                     </button>
                                 </div>
                             </div>
+                            <div class="admin-setting-item">
+                                <div class="setting-description">Toggle chat status between active and locked</div>
+                                <div class="setting-action">
+                                    <label class="toggle-switch">
+                                        <input type="checkbox" id="chatStatusToggle" onchange="toggleChatStatus()">
+                                        <span class="toggle-slider"></span>
+                                    </label>
+                                    <span class="toggle-label" id="chatStatusLabel">Active</span>
+                                </div>
+                            </div>
                         </div>
                     </section>
 
