--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -75,6 +75,7 @@
                     <img src="assets/logo_nobg.png" alt="Chat" class="user-img">
                 </div>
             </div>
+            <div class="chat-toggle-notification-dot" id="chatToggleNotificationDot"></div>
         </button>
     </div>
 
@@ -99,6 +100,10 @@
                 </div>
             </div>
             <div class="chat-controls-right">
+                <div class="chat-status-indicator" id="chatStatusIndicator">
+                    <div class="status-dot-indicator active" id="statusDotIndicator"></div>
+                    <span class="status-text" id="statusText">Active</span>
+                </div>
                 <div class="notification-dot" id="chatNotificationDot"></div>
             </div>
         </div>
