mobile view hamburger menu button

--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -22,7 +22,11 @@
                 <span class="nav-brand">Intra Sudo v6.0</span>
             </a>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
-                <img src="assets/logo_nobg.png" alt="Menu" class="mobile-menu-icon">
+                <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="24" height="3" fill="currentColor"/>
+                    <rect y="7.5" width="24" height="3" fill="currentColor"/>
+                    <rect y="15" width="24" height="3" fill="currentColor"/>
+                </svg>
             </button>
         </div>
         <div class="nav-center">
