--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -28,10 +28,10 @@
                 </svg>
             </button>
         </div>
-        <div class="nav-center">
+        <div class="nav-center" style="justify-content: center !important; align-items: center;">
             <a href="/home" class="nav-link">Home</a>
-            <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link">Hints</a>
+            <a href="/leaderboard" class="nav-link" style="text-align: center;">Leaderboard</a>
+            <a href="/announcements" class="nav-link">Announcements</a>
         </div>
         <div class="nav-right">
             <a href="/admin" class="nav-link active" id="adminLink">
@@ -45,7 +45,7 @@
         <div class="mobile-nav-links">
             <a href="/home" class="nav-link">Home</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link">Hints</a>
+            <a href="/announcements" class="nav-link">Announcements</a>
             <a href="/admin" class="nav-link active" id="mobileAdminLink">Admin</a>
             <a href="#" class="nav-link" onclick="handleLogout()">Log Out</a>
         </div>
