--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -32,7 +32,7 @@
         <div class="nav-center">
             <a href="/home" class="nav-link">Home</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link active">Hints</a>
+            <a href="/announcements" class="nav-link active">Announcements</a>
         </div>
         <div class="nav-right">
             <a href="/admin" class="nav-link" id="adminLink" style="display: none;">Admin</a>
@@ -44,7 +44,7 @@
         <div class="mobile-nav-links">
             <a href="/home" class="nav-link">Home</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link active">Hints</a>
+            <a href="/announcements" class="nav-link active">Announcements</a>
             <a href="/admin" class="nav-link" id="mobileAdminLink" style="display: none;">Admin</a>
             <a href="#" class="nav-link" onclick="handleLogout()">Log Out</a>
         </div>
