--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
         <div class="nav-center">
             <a href="/home" class="nav-link active">Home</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link">Hints</a>
+            <a href="/announcements" class="nav-link">Announcements</a>
         </div>
         <div class="nav-right">
             <a href="/admin" class="nav-link" id="adminLink" style="display: none;">Admin</a>
@@ -43,7 +43,7 @@
         <div class="mobile-nav-links">
             <a href="/home" class="nav-link active">Home</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
-            <a href="/hints" class="nav-link">Hints</a>
+            <a href="/announcements" class="nav-link">Announcements</a>
             <a href="/admin" class="nav-link" id="mobileAdminLink" style="display: none;">Admin</a>
             <a href="#" class="nav-link" onclick="handleLogout()">Log Out</a>
         </div>
