switched to playground

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -29,7 +29,7 @@
             </button>
         </div>
         <div class="nav-center" style="justify-content: center !important; align-items: center;">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link" style="text-align: center;">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
         </div>
@@ -43,7 +43,7 @@
 
     <div class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-links">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
             <a href="/admin" class="nav-link active" id="mobileAdminLink">Admin</a>
