--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/chat.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
+<!"What is there at 0:43?">
 <body class="index-page">
     <nav class="navbar">
         <div class="nav-left">
@@ -29,7 +30,7 @@
             </button>
         </div>
         <div class="nav-center">
-            <a href="/home" class="nav-link active">Home</a>
+            <a href="/playground" class="nav-link active">Playground</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
         </div>
@@ -41,7 +42,7 @@
 
     <div class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-links">
-            <a href="/home" class="nav-link active">Home</a>
+            <a href="/playground" class="nav-link active">Playground</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
             <a href="/admin" class="nav-link" id="mobileAdminLink" style="display: none;">Admin</a>
