--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -30,7 +30,7 @@
             </button>
         </div>
         <div class="nav-center">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
             <a href="/announcements" class="nav-link active">Announcements</a>
         </div>
@@ -42,7 +42,7 @@
 
     <div class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-links">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link">Leaderboard</a>
             <a href="/announcements" class="nav-link active">Announcements</a>
             <a href="/admin" class="nav-link" id="mobileAdminLink" style="display: none;">Admin</a>
