--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -29,7 +29,7 @@
             </button>
         </div>
         <div class="nav-center">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link active">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
         </div>
@@ -42,7 +42,7 @@
     <!-- Mobile Navigation Menu -->
     <div class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-links">
-            <a href="/home" class="nav-link">Home</a>
+            <a href="/playground" class="nav-link">Playground</a>
             <a href="/leaderboard" class="nav-link active">Leaderboard</a>
             <a href="/announcements" class="nav-link">Announcements</a>
             <a href="/admin" class="nav-link" id="mobileAdminLink" style="display: none;">Admin</a>
