--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,12 +49,13 @@
             <a href="#" class="nav-link" onclick="handleLogout()">Log Out</a>
         </div>
     </div>
-
+<!the inventors are always pranking>
     <main class="page-container">
         <div class="main-content-pages">
             <div class="main-content">
                 <h1 class="level-heading" id="levelTitle">Level X</h1>
-                <div id="levelContent" style="margin-bottom: 2rem; text-align: center;">
+                <div id="levelQuestion" class="level-question-text" style="margin: 0.2rem 0; text-align: center; font-size: 0.95rem; color: var(--text-primary);"></div>
+                <div id="levelContent" style="margin-bottom: 0.1rem; text-align: center;">
                     <div id="levelMedia"></div>
                 </div>
                 <input 
@@ -68,7 +69,7 @@
             </div>
         </div>
     </main>
-
+<!https://pastebin.com/UKP7e7j8>
     <div id="chatToggleBtn">
         <button id="btn-message" class="button-message">
             <div class="content-avatar">
