--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -91,13 +91,8 @@
                                 <input type="number" id="levelNumber" class="form-input" placeholder="Enter level number" min="1">
                             </div>
                             <div class="form-group">
-                                <label class="form-label">Level Hints:</label>
-                                <div id="questionsContainer">
-                                    <div class="question-input-group">
-                                        <textarea class="form-input form-textarea level-question" placeholder="Enter the level hint or description"></textarea>
-                                        <button type="button" class="btn-add-question" onclick="addQuestionInput()">+</button>
-                                    </div>
-                                </div>
+                                <label class="form-label" for="levelQuestion">Level Question:</label>
+                                <textarea id="levelQuestion" class="form-input form-textarea" placeholder="Enter the level question or description"></textarea>
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="levelAnswer">Correct Answer:</label>
