used checksums for status countdown

--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -181,5 +181,6 @@
     <script src="js/utils.js?v=2"></script>
     <script src="js/chat.js"></script>
     <script src="js/hints.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 </html>
