--- a/frontend/index.html
+++ b/frontend/index.html
@@ -205,5 +205,6 @@
     <script src="js/utils.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 </html>
