--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -194,5 +194,6 @@
     <script src="js/utils.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/leaderboard.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 </html>
