--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -80,6 +80,7 @@
     </div>
     
     <script src="js/auth.js"></script>
+    <script src="js/countdown.js"></script>
 
     <style>
     .auth-modal {
