--- a/frontend/404.html
+++ b/frontend/404.html
@@ -25,7 +25,7 @@
                             The page you're looking for doesn't exist or has been moved.
                         </p>
                         <div class="error-actions">
-                            <a href="/home" class="btn-primary error-btn">
+                            <a href="/playground" class="btn-primary error-btn">
                                 <span>Go Home</span>
                             </a>
                         </div>
