--- a/frontend/guidelines.html
+++ b/frontend/guidelines.html
@@ -86,7 +86,7 @@
                     </div>
                     
                     <div class="guidelines-actions" style="display: flex !important; justify-content: center !important; align-items: center !important; margin: 2rem 0 !important; text-align: center !important;">
-                        <a href="/home" class="landing-button" style="margin: 0 auto !important;" id="getStartedButton">Get Started</a>
+                        <a href="/playground" class="landing-button" style="margin: 0 auto !important;" id="getStartedButton">Get Started</a>
                     </div>
                 </div>
             </div>
