--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <a href="/home" class="logo-link">
+            <a href="/playground" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
                 <div class="logo-notification" id="logoNotification" style="display: none;"></div>
                 <span class="nav-brand">Intra Sudo v6.0</span>
