--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -127,7 +127,7 @@
                 
                 <div id="leadsContainer" class="chat-messages-container no-scrollbar">
                     <div class="empty-state">
-                        <div class="empty-icon">INBOX</div>
+                        <div class="empty-icon">📧</div>
                         <p>No messages with admins yet.</p>
                     </div>
                 </div>
@@ -177,8 +177,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
-    <script src="js/utils.js?v=2"></script>
+    <script src="js/utils.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/hints.js"></script>
     <script src="js/countdown.js"></script>
