--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,20 +111,7 @@
         </div>
 
         <div class="chat-header">
-            <div class="chat-tabs">
-                    <div class="chat-tab active" onclick="switchChatTab('leads')" data-tab="leads">
-                        <span class="tab-text">Leads</span>
-                        <span class="tab-badge" id="leadsBadge" style="display: none;">0</span>
-                    </div>
-                    <div class="chat-tab" onclick="switchChatTab('hints')" data-tab="hints">
-                        <span class="tab-text">Hints</span>
-                        <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
-                    </div>
-            </div>
-            <!-- <div class="chat-title-area">
-                <div class="chat-connection-status" id="connectionStatus">
-                    <span class="status-dot"></span>
-                </div>
+            <div class="chat-title-area">
                 <div class="chat-tabs">
                     <div class="chat-tab active" onclick="switchChatTab('leads')" data-tab="leads">
                         <span class="tab-text">Leads</span>
@@ -135,7 +122,7 @@
                         <span class="tab-badge" id="hintsBadge" style="display: none;">0</span>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
 
         <div id="leadsContent" class="chat-tab-content active">
@@ -147,7 +134,7 @@
                 
                 <div id="leadsContainer" class="chat-messages-container no-scrollbar">
                     <div class="empty-state">
-                        <div class="empty-icon">INBOX</div>
+                        <div class="empty-icon">📧</div>
                         <p>No messages yet</p>
                     </div>
                 </div>
@@ -201,7 +188,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/index.js"></script>
