scaled playground chat popup

--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -73,6 +73,7 @@
             <div class="chat-toggle-notification-dot" id="chatToggleNotificationDot"></div>
         </button>
     </div>
+    </div>
 
     <div id="chatPopup">
         <div id="chatControls">
