--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,22 +80,23 @@
             <div class="chat-toggle-notification-dot" id="chatToggleNotificationDot"></div>
         </button>
     </div>
+    </div>
 
     <div id="chatPopup">
         <div id="chatControls">
             <div class="chat-controls-left">
-                <div id="chatCloseBtn" class="chat-control-btn" title="Close">
+                <div id="chatCloseBtn" class="chat-control-btn">
                     <svg width="7" height="7" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14 2L2 14" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round" />
                         <path d="M2 2L14 14" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round" />
                     </svg>
                 </div>
-                <div id="chatMinimizeBtn" class="chat-control-btn" title="Minimize">
+                <div id="chatMinimizeBtn" class="chat-control-btn">
                     <svg width="7" height="7" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M4 8h8" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
                     </svg>
                 </div>
-                <div id="chatMaximizeBtn" class="chat-control-btn" title="Fullscreen">
+                <div id="chatMaximizeBtn" class="chat-control-btn">
                     <svg width="7" height="7" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="3" width="10" height="10" stroke="currentColor" stroke-width="2" fill="none" />
                     </svg>
@@ -135,7 +136,7 @@
                 <div id="leadsContainer" class="chat-messages-container no-scrollbar">
                     <div class="empty-state">
                         <div class="empty-icon">📧</div>
-                        <p>No messages yet</p>
+                        <p>No messages with admins yet.</p>
                     </div>
                 </div>
             </div>
