forced white header

--- a/mail.html
+++ b/mail.html
@@ -118,7 +118,7 @@
   <div class="container">
     <div style="text-align: center;">
       <img src="https://intra.sudocrypt.com/assets/logo_nobg.png" alt="Exun Logo" class="logo" />
-      <h1>Intrasudo v6.0</h1>
+      <h1 style="color: white;">Intra Sudo v6.0</h1>
       <p class="subtext">Presented by Exun Clan, DPS R.K. Puram</p>
     </div>
 
