changed css to inline due to gmail support issues

--- a/mail.html
+++ b/mail.html
@@ -3,149 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      width: 90%;
-      max-width: 600px;
-      margin: 2rem auto;
-      background: #151618;
-      border: 1px solid rgba(255,255,255,0.15);
-      border-radius: 12px;
-      padding: 2rem;
-      box-sizing: border-box;
-    }
-
-    .logo {
-      width: 6rem;
-      margin-bottom: 1rem;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    .subtext {
-      color: #999;
-      font-size: 0.95rem;
-    }
-
-    .divider {
-      border-top: 1px solid rgba(255,255,255,0.1);
-      margin-top: 1.5rem;
-      padding-top: 1.5rem;
-    }
-
-    .paragraph {
-      font-size: 1rem;
-      line-height: 1.6rem;
-      color: #ccc;
-      text-align: center;
-    }
-
-    .event-duration {
-      background: #222;
-      border-radius: 0.5rem;
-      padding: 1rem;
-      margin: 2rem auto;
-      text-align: center;
-      color: #fff;
-      max-width: 100%;
-    }
-
-    .event-duration span {
-      color: #2977F5;
-      font-weight: bold;
-      margin: 0 0.25rem;
-    }
-
-    .resource-box {
-      background: #1e1f22;
-      border-radius: 0.5rem;
-      padding: 1rem;
-      margin: 2rem auto;
-      text-align: center;
-    }
-
-    .cta {
-      display: inline-block;
-      background-color: #2977F5;
-      color: #fff;
-      text-decoration: none;
-      padding: 0.75rem 1.5rem;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 0.5rem;
-      margin: 2rem auto;
-      text-align: center;
-    }
-
-    .footer {
-      text-align: center;
-      padding-top: 2rem;
-      border-top: 1px solid rgba(255,255,255,0.15);
-      color: rgba(255,255,255,0.5);
-      font-size: 0.85rem;
-    }
-
-    @media (max-width: 480px) {
-      .event-duration {
-        font-size: 0.9rem;
-      }
-
-      .cta {
-        width: 100%;
-        display: block;
-        box-sizing: border-box;
-      }
-
-      .logo {
-        width: 4rem;
-      }
-    }
-  </style>
 </head>
-
-<body>
-  <div class="container">
+<body style="margin: 0; padding: 0; color: #fff; font-family: Arial, sans-serif; background: #000;">
+  <div style="width: 90%; max-width: 600px; margin: 2rem auto; background: #151618; border: 1px solid rgba(255,255,255,0.15); border-radius: 12px; padding: 2rem; box-sizing: border-box;">
     <div style="text-align: center;">
-      <img src="https://intra.sudocrypt.com/assets/logo_nobg.png" alt="Exun Logo" class="logo" />
-      <h1 style="color: white;">Intra Sudo v6.0</h1>
-      <p class="subtext">Presented by Exun Clan, DPS R.K. Puram</p>
+      <img src="https://intra.sudocrypt.com/assets/logo_nobg.png" alt="Exun Logo" style="width: 6rem; margin-bottom: 1rem;" />
+      <h1 style="margin: 0; font-size: 2rem; font-weight: 700; color: white;">Intra Sudo v6.0</h1>
+      <p style="color: #999; font-size: 0.95rem;">Presented by Exun Clan, DPS R.K. Puram</p>
     </div>
 
-    <div class="divider">
-      <p class="paragraph" style="color: #ddd;">Greetings!</p>
+    <div style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 1.5rem; padding-top: 1.5rem;">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ddd; text-align: center;">Greetings!</p>
 
-      <p class="paragraph">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">
         The Annual Intra-School Cryptic Hunt event, <strong>Intrasudo v6.0</strong>, is being presented by Exun Clan, the computer club of <strong>Delhi Public School R.K. Puram</strong>, with great enthusiasm.
         You can register to attend it at
         <a href="https://intra.sudocrypt.com/" style="color: #2977F5; text-decoration: none;">intra.sudocrypt.com</a>
         using your institutional email IDs.
       </p>
 
-      <div class="event-duration">
+      <div style="background: #222; border-radius: 0.5rem; padding: 1rem; margin: 2rem auto; text-align: center; color: #fff; max-width: 100%; font-size: 1rem;">
         <strong>Event Duration:</strong><br />
-        5th July 2025, 12:00 PM <span>→</span> 6th July 2025, 12:00 PM
+        5th July 2025, 12:00 PM <span style="color: #2977F5; font-weight: bold; margin: 0 0.25rem;">→</span> 6th July 2025, 12:00 PM
       </div>
 
-      <p class="paragraph">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">
         Cryptic hunts are multifaceted problems that must be resolved over the course of several days in these tournaments, using the provided suggestions, reasoning, as well as your own creativity and innovation. At the inter-school, national, and international levels, Exun Clan takes part in a variety of cryptic hunts.
       </p>
 
-      <p class="paragraph">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">
         Participants <strong>at the top of the leaderboard</strong> will have a chance to join the club. You may find the hunt's regulations and frequently asked questions on the website itself. The platform includes a chat application that will be used for <strong>lead confirmations and hint releases</strong>.
       </p>
 
-      <div class="resource-box">
+      <div style="background: #1e1f22; border-radius: 0.5rem; padding: 1rem; margin: 2rem auto; text-align: center;">
         <p style="margin: 0; font-size: 1rem; color: #fff;">
           <strong>New to cryptic hunts?</strong><br />
           Check out resources at
@@ -154,22 +44,22 @@
         </p>
       </div>
 
-      <p class="paragraph">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">
         Even if you don't instantly feel that you are suited for cryptic hunts or will like it, it is nevertheless strongly advised that you take part.
       </p>
 
       <div style="text-align: center;">
-        <a href="https://intra.sudocrypt.com/" class="cta">Register Now</a>
+        <a href="https://intra.sudocrypt.com/" style="display: inline-block; background-color: #2977F5; color: #fff; text-decoration: none; padding: 0.75rem 1.5rem; font-weight: bold; font-size: 1rem; border-radius: 0.5rem; margin: 2rem auto; text-align: center;">Register Now</a>
       </div>
 
-      <p class="paragraph">
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">
         For queries: <a href="mailto:exun@dpsrkp.net" style="color: #2977F5; text-decoration: none;">exun@dpsrkp.net</a>
       </p>
 
-      <p class="paragraph">We wish you success.<br />Happy Hunting!</p>
+      <p style="font-size: 1rem; line-height: 1.6rem; color: #ccc; text-align: center;">We wish you success.<br />Happy Hunting!</p>
     </div>
 
-    <div class="footer">
+    <div style="text-align: center; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.15); color: rgba(255,255,255,0.5); font-size: 0.85rem;">
       &copy; Exun Clan<br />
       The Computer Club of Delhi Public School, R.K. Puram
     </div>
